--- a/shop/cart/package.json
+++ b/shop/cart/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "products",
+  "name": "cart",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,10 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "faker": "^5.5.3",
     "html-webpack-plugin": "^5.6.0",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1"
   }
 }
-
