--- a/cms/auth/package.json
+++ b/cms/auth/package.json
@@ -2,7 +2,7 @@
   "name": "auth",
   "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "echo "
   },
   "dependencies": {
     "react": "^18.2.0",
