--- a/cms/dashboard/package.json
+++ b/cms/dashboard/package.json
@@ -2,7 +2,7 @@
   "name": "dashboard",
   "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "echo"
   },
   "dependencies": {
     "chart.js": "^4.4.1",
