--- a/cms/marketing/package.json
+++ b/cms/marketing/package.json
@@ -2,7 +2,7 @@
   "name": "marketing",
   "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack serve --config webpack.dev.js"
   },
   "dependencies": {
     "react": "^18.2.0",
@@ -12,8 +12,12 @@
   "devDependencies": {
     "@babel/core": "^7.23.9",
     "@babel/plugin-transform-runtime": "^7.23.9",
+    "@babel/plugin-transform-typescript": "^7.23.6",
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/react": "^18.2.55",
+    "@types/react-dom": "^18.2.19",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.10.0",
