--- a/cms/package.json
+++ b/cms/package.json
@@ -4,10 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently --kill-others 'npm start --prefix marketing' 'npm start --prefix host' 'npm start --prefix dashboard' 'npm start --prefix auth'",
+    "start": "concurrently 'npm start --prefix marketing' 'npm start --prefix host' 'npm start --prefix dashboard' 'npm start --prefix auth'",
     "postinstall": "(cd marketing && npm install); (cd dashboard && npm install); (cd host && npm install); (cd auth && npm install);"
   },
   "keywords": [ ],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^8.2.2"
+  }
 }
