--- a/platform/dashboard/package.json
+++ b/platform/dashboard/package.json
@@ -1,28 +1,30 @@
 {
-  "name": "marketing",
+  "name": "sales",
   "version": "1.0.0",
   "scripts": {
-    "start": "webpack serve --config webpack.dev.js"
+    "start": "echo"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0"
+    "chart.js": "^4.4.1",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.48.1",
+    "vue": "^3.4.18"
   },
   "devDependencies": {
     "@babel/core": "^7.23.9",
     "@babel/plugin-transform-runtime": "^7.23.9",
-    "@babel/plugin-transform-typescript": "^7.23.6",
     "@babel/preset-env": "^7.23.9",
-    "@babel/preset-react": "^7.23.3",
-    "@babel/preset-typescript": "^7.23.3",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
+    "@vue/compiler-sfc": "^3.4.18",
     "babel-loader": "^9.1.3",
-    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.10.0",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.6.0",
+    "node-sass": "^9.0.0",
+    "sass-loader": "^14.1.0",
     "style-loader": "^3.3.4",
+    "vue-loader": "^17.4.2",
+    "vue-style-loader": "^4.1.3",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
