--- a/platform/package.json
+++ b/platform/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "concurrently 'npm start --prefix marketing' 'npm start --prefix host' 'npm start --prefix dashboard' 'npm start --prefix auth'",
+    "start": "concurrently 'npm start --prefix monitoring' 'npm start --prefix cms' 'npm start --prefix auth' 'npm start --prefix host'",
     "postinstall": "(cd marketing && npm install); (cd dashboard && npm install); (cd host && npm install); (cd auth && npm install);"
   },
   "keywords": [ ],
