--- a/.github/workflows/container.yaml
+++ b/.github/workflows/container.yaml
@@ -37,7 +37,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
 
-      - name: Deploy resoources
+      - name: Deploy resources
         run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/host/latest
 
       - name: Set no max-edge for index.html
