--- a/.github/workflows/host.yaml
+++ b/.github/workflows/host.yaml
@@ -1,4 +1,4 @@
-name: deploy-container
+name: deploy-host-app
 
 on:
   push:
@@ -29,6 +29,7 @@ jobs:
         run: |
           npm install
           npm run build
+          env: REMOTE_APP_DOMAIN: ${{ secrets.REMOTE_APP_DOMAIN }}
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
