--- a/platform/auth/package.json
+++ b/platform/auth/package.json
@@ -2,9 +2,13 @@
   "name": "auth",
   "version": "1.0.0",
   "scripts": {
-    "start": "echo "
+    "start": "webpack serve --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
+  "homepage": "./",
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
+    "postcss-loader": "^8.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0"
@@ -12,13 +16,20 @@
   "devDependencies": {
     "@babel/core": "^7.23.9",
     "@babel/plugin-transform-runtime": "^7.23.9",
+    "@babel/plugin-transform-typescript": "^7.23.6",
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/react": "18.2.19",
+    "@types/react-dom": "18.2.19",
+    "autoprefixer": "^10.4.17",
     "babel-loader": "^9.1.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
+    "postcss": "^8.4.35",
     "style-loader": "^3.3.4",
+    "tailwindcss": "^3.4.1",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^4.15.1",
