--- a/auth/package.json
+++ b/auth/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
     "postcss-loader": "^8.1.0",
+    "pubsub-js": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0"
