--- a/cms/package.json
+++ b/cms/package.json
@@ -11,6 +11,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "postcss-loader": "^8.1.0",
+    "pubsub-js": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.0",
