--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -9,6 +9,7 @@
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.48.1",
+    "pubsub-js": "^1.9.4",
     "vue": "^3.4.18"
   },
   "devDependencies": {
