--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -1,34 +1,41 @@
 {
-  "name": "dashboard",
+  "name": "host",
   "version": "1.0.0",
   "scripts": {
-    "start": "echo"
+    "start": "webpack serve --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js"
   },
+  "homepage": "./",
   "dependencies": {
-    "chart.js": "^4.4.1",
-    "primeflex": "^3.3.1",
-    "primeicons": "^6.0.1",
-    "primevue": "^3.48.1",
-    "pubsub-js": "^1.9.4",
-    "vue": "^3.4.18"
+    "@material-tailwind/react": "^2.1.9",
+    "autoprefixer": "^10.4.17",
+    "postcss-loader": "^8.1.0",
+    "style-loader": "^3.3.4",
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/plugin-transform-runtime": "^7.23.9",
-    "@babel/preset-env": "^7.23.9",
-    "@vue/compiler-sfc": "^3.4.18",
-    "babel-loader": "^9.1.3",
-    "css-loader": "^6.10.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/svelte": "^3.1.1",
+    "@tsconfig/svelte": "^3.0.0",
+    "@types/jest": "^27.4.1",
+    "@types/testing-library__jest-dom": "^5.14.3",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^3.4.1",
     "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.6.0",
-    "node-sass": "^9.0.0",
-    "sass-loader": "^14.1.0",
-    "style-loader": "^3.3.4",
-    "vue-loader": "^17.4.2",
-    "vue-style-loader": "^4.1.3",
-    "webpack": "^5.90.1",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "webpack-merge": "^5.10.0"
+    "fork-ts-checker-webpack-plugin": "^7.2.3",
+    "html-webpack-plugin": "^5.5.0",
+    "jest": "^27.5.1",
+    "mini-css-extract-plugin": "^2.6.0",
+    "rimraf": "^3.0.2",
+    "svelte": "^3.47.0",
+    "svelte-jester": "^2.3.2",
+    "svelte-loader": "^3.1.2",
+    "svelte-preprocess": "^4.10.5",
+    "ts-jest": "^27.1.4",
+    "ts-loader": "^9.2.8",
+    "typescript": "^4.6.3",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   }
 }
