--- a/.github/workflows/dasboard.yaml
+++ b/.github/workflows/dasboard.yaml
@@ -41,7 +41,7 @@ jobs:
         run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/dashboard/latest
 
       - name: Set no max-edge for index.html
-        run: aws s3 cp s3://${{ secrets.AWS_S3_BUCKET_NAME }}/dasboard/latest/index.html s3://${{ secrets.AWS_S3_BUCKET_NAME }}/dashboard/latest/index.html --metadata-directive REPLACE --cache-control max-age=0 --content-type "text/html"
+        run: aws s3 cp s3://${{ secrets.AWS_S3_BUCKET_NAME }}/dashboard/latest/index.html s3://${{ secrets.AWS_S3_BUCKET_NAME }}/dashboard/latest/index.html --metadata-directive REPLACE --cache-control max-age=0 --content-type "text/html"
 
       - name: Invalidate cache
         run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --path "/dashboard/latest/index.html"
