--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -16,6 +16,9 @@
     "css-loader": "^6.10.0",
     "css-minimizer-webpack-plugin": "^6.0.0",
     "file-loader": "^6.2.0",
+    "flowbite": "^2.3.0",
+    "flowbite-svelte": "^0.44.23",
+    "flowbite-svelte-icons": "^1.4.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.8.0",
