fix styles clashing

--- a/auth/package.json
+++ b/auth/package.json
@@ -1,14 +1,12 @@
 {
   "name": "auth",
   "version": "1.0.0",
-  "scripts": {
-    "start": "webpack serve --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
-  },
   "homepage": "./",
+  "scripts": {
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack serve --config webpack.dev.js"
+  },
   "dependencies": {
-    "@material-tailwind/react": "^2.1.9",
-    "postcss-loader": "^8.1.0",
     "pubsub-js": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -21,6 +19,7 @@
     "@babel/preset-env": "^7.23.9",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.23.3",
+    "@material-tailwind/react": "^2.1.9",
     "@types/react": "18.2.19",
     "@types/react-dom": "18.2.19",
     "autoprefixer": "^10.4.17",
@@ -29,6 +28,7 @@
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
     "postcss": "^8.4.35",
+    "postcss-loader": "^8.1.0",
     "style-loader": "^3.3.4",
     "tailwindcss": "^3.4.1",
     "webpack": "^5.90.1",
