--- a/cms/package.json
+++ b/cms/package.json
@@ -1,16 +1,15 @@
 {
   "name": "cms",
   "version": "1.0.0",
-  "scripts": {
-    "start": "webpack serve --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
-  },
   "homepage": "./",
+  "scripts": {
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack serve --config webpack.dev.js"
+  },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
-    "postcss-loader": "^8.1.0",
     "pubsub-js": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,6 +31,7 @@
     "css-loader": "^6.10.0",
     "html-webpack-plugin": "^5.6.0",
     "postcss": "^8.4.35",
+    "postcss-loader": "^8.1.0",
     "style-loader": "^3.3.4",
     "tailwindcss": "^3.4.1",
     "webpack": "^5.90.1",
