--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -1,14 +1,17 @@
 {
   "name": "host",
   "version": "1.0.0",
-  "scripts": {
-    "start": "webpack serve --config webpack.dev.js",
-    "build": "webpack --config webpack.prod.js"
-  },
   "homepage": "./",
+  "scripts": {
+    "build": "webpack --config webpack.prod.js",
+    "start": "webpack serve --config webpack.dev.js"
+  },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
-    "tailwindcss": "^3.4.1"
+    "flowbite": "^2.3.0",
+    "flowbite-svelte": "^0.44.23",
+    "flowbite-svelte-icons": "^1.4.0",
+    "svelte": "^4.2.11"
   },
   "devDependencies": {
     "@tsconfig/svelte": "^5.0.2",
@@ -16,17 +19,14 @@
     "css-loader": "^6.10.0",
     "css-minimizer-webpack-plugin": "^6.0.0",
     "file-loader": "^6.2.0",
-    "flowbite": "^2.3.0",
-    "flowbite-svelte": "^0.44.23",
-    "flowbite-svelte-icons": "^1.4.0",
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "html-webpack-plugin": "^5.6.0",
     "mini-css-extract-plugin": "^2.8.0",
     "postcss-loader": "^8.1.0",
     "style-loader": "^3.3.4",
-    "svelte": "^4.2.11",
     "svelte-loader": "^3.1.9",
     "svelte-preprocess": "^5.1.3",
+    "tailwindcss": "^3.4.1",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
     "webpack": "^5.90.2",
