--- a/.github/workflows/auth.yaml
+++ b/.github/workflows/auth.yaml
@@ -1,47 +1,47 @@
-name: deploy-auth-app
+# name: deploy-auth-app
 
-on:
-  push:
-    branches: ['main']
-    paths: auth/**
+# on:
+#   push:
+#     branches: ['main']
+#     paths: auth/**
 
-defaults:
-  run:
-    working-directory: auth
+# defaults:
+#   run:
+#     working-directory: auth
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [21.x]
+#     strategy:
+#       matrix:
+#         node-version: [21.x]
 
-    steps:
-      - uses: actions/checkout@v3
+#     steps:
+#       - uses: actions/checkout@v3
 
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
+#       - name: Use Node.js ${{ matrix.node-version }}
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: ${{ matrix.node-version }}
 
-      - name: Build
-        run: |
-          npm install
-          npm run build
+#       - name: Build
+#         run: |
+#           npm install
+#           npm run build
 
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v1
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-east-1
+#       - name: Configure AWS Credentials
+#         uses: aws-actions/configure-aws-credentials@v1
+#         with:
+#           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+#           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+#           aws-region: us-east-1
 
-      - name: Deploy resources
-        run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/auth/latest
+#       - name: Deploy resources
+#         run: aws s3 sync dist s3://${{ secrets.AWS_S3_BUCKET_NAME }}/auth/latest
 
-      - name: Set no max-edge for index.html
-        run: aws s3 cp s3://${{ secrets.AWS_S3_BUCKET_NAME }}/auth/latest/index.html s3://${{ secrets.AWS_S3_BUCKET_NAME }}/auth/latest/index.html --metadata-directive REPLACE --cache-control max-age=0 --content-type "text/html"
+#       - name: Set no max-edge for index.html
+#         run: aws s3 cp s3://${{ secrets.AWS_S3_BUCKET_NAME }}/auth/latest/index.html s3://${{ secrets.AWS_S3_BUCKET_NAME }}/auth/latest/index.html --metadata-directive REPLACE --cache-control max-age=0 --content-type "text/html"
 
-      - name: Invalidate cache
-        run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --path "/auth/latest/index.html"
+#       - name: Invalidate cache
+#         run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_DISTRIBUTION_ID }} --path "/auth/latest/index.html"
